# CM2290-Performance-Kit

./: README.md
CM2290PerformanceKit/app/: CMakeLists.txt
CM2290PerformanceKit/app/src/main/: AndroidManifest.xml
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/AI/: AssetsUtil.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Activity/: MainActivity.java  StatisticsActivity.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Config/: GlobalConfig.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Constants/: Constants.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Data/: GoodsInfo.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Database/: GoodsInfoHelper.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Utils/: ImageUtils.java
CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/VIew/: MultiObjectDetectionFragment.java  PlayFragment.java
CM2290PerformanceKit/app/src/main/res/layout/: fragment_playe.xml
github/CM2290PerformanceKit/: build.gradle  settings.gradle
github/CM2290PerformanceKit/app/: CMakeLists.txt  SuperResolution_jni.cpp  build.gradle
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/AI/: MultiObjectDetectionTask.java
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Activity/: RtspManagerActivity.java  SettingsActivity.java
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Data/: Recognition.java
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Database/: DatabaseStatic.java  GoodsManager.java
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/Gl/: MyGLSurfaceView.java
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/eBox/VIew/: BorderedText.java  MultiBoxTracker.java
github/CM2290PerformanceKit/app/src/main/java/com/thundercomm/gateway/data/: DeviceCollection.java
github/CM2290PerformanceKit/app/src/main/res/values/: strings.xml
github/CM2290PerformanceKit/app/src/main/res/xml/: root_preferences.xml
github/doc/: CM2290 Performance Kit.docx  CM2290 Performance Kit.txt
内部review/: 项目开源代码_check_list.xlsx
